<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/backgroundColor">

    <ImageView
        android:id="@+id/R_img_1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/gambar1"
        tools:ignore="InvalidId,ImageContrastCheck" />

    <ImageView
        android:id="@+id/iconleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_arrow"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
       tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/R_txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iconleft"
        android:text="@string/welcome_to_nilkanth_medical"
        android:layout_marginTop="110dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/R_txt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/R_txt_1"
        android:text="@string/let_s_help_you_meet_up_your_tasks"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/poppinsregular"
        android:textSize="15sp"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/R_txt_2"
        android:padding="30sp"
        android:id="@+id/ly_1">
    <EditText
        android:id="@+id/txtname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:height="50dp"
        android:background="@drawable/btn_primery"
        android:backgroundTint="@color/white"
        android:padding="15sp"
        android:inputType="text"
        android:paddingStart="25sp"
        android:autofillHints="name"
        android:hint="@string/enter_your_full_name"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/mobilenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:height="50dp"
        android:background="@drawable/btn_primery"
        android:backgroundTint="@color/white"
        android:padding="15dp"
        android:inputType="number"
        android:hint="@string/enter_your_mobile_number"
        android:textColorHint="#546E7A"
        android:autofillHints="" />
    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:height="50dp"
        android:background="@drawable/btn_primery"
        android:backgroundTint="@color/white"
        android:padding="15dp"
        android:inputType="textPassword"
        android:hint="@string/create_password"
        android:textColorHint="#546E7A"
        android:autofillHints="" />
    <EditText
        android:id="@+id/loginconfigpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:height="50dp"
        android:background="@drawable/btn_primery"
        android:backgroundTint="@color/white"
        android:padding="15dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textColorHint="#546E7A"
        android:autofillHints="" />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/R_btn"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="0dp"
        android:layout_below="@id/ly_1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_primery"
        android:textColor="@color/white"
        android:textSize="18sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/R_btn"
        android:layout_marginTop="10sp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:fontFamily="@font/poppinsregular"
            android:textSize="15sp"
            android:textColor="@color/black"/>
    <TextView
        android:id="@+id/txtlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/poppinsregular"
        android:textSize="15sp"
        android:textColor="@color/Primary"/>
    </LinearLayout>
</RelativeLayout>