<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_16pxh"
    android:layout_gravity="center"
    app:cardPreventCornerOverlap="true"
    android:layout_marginRight="2dp"
    android:layout_marginLeft="2dp"
    android:layout_marginBottom="@dimen/_10pxh"
    android:background="@color/white">


    <LinearLayout
        android:id="@+id/linearColumnaccucheckacti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        android:background="@color/white">

        <FrameLayout
            android:id="@+id/frameStack"
            style="@style/groupStylegray_200cornerRadius"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_154pxv"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageCardItems"
                style="@style/groupStylegray_200cornerRadius"
                android:layout_width="@dimen/_109pxh"
                android:layout_height="@dimen/_134pxh"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_marginEnd="@dimen/_34pxh"
                android:layout_marginBottom="@dimen/_11pxv"
                android:src="@drawable/img_card_items" />
        </FrameLayout>

        <TextView
            android:id="@+id/txtName"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:gravity="start"
            android:lineSpacingExtra="@dimen/_6pxh"
            android:text="@string/msg_name"
            android:textColor="@color/black" />



        <LinearLayout
            android:id="@+id/linearRowprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_marginBottom="@dimen/_15pxv"
            android:gravity="end"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/txtPrice"
                style="@style/txtOverpassbold16_1"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.41"
                android:ellipsize="start"
                android:singleLine="true"
                android:textColor="@color/black"
                android:text="@string/lbl_price" />

            <LinearLayout
                android:id="@+id/linearRowvector"
                style="@style/groupStyleamber_A400cornerRadius"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_weight="0.59"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageVector"
                    android:layout_width="@dimen/_13pxh"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_star"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/txtrating"
                    style="@style/txtSofiaProbold13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_marginEnd="@dimen/_3pxh"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:text="@string/lbl_reting" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
